<resources>
    <string name="app_name">Pots &amp; Pans</string>

    <string name="app_name_sent">Sent from Pots &amp; Pans App: </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="ok">Ok</string>
    <string name="exit">Exit</string>
    <string name="message_error">Error acquire while loading data.\nplease try again</string>
    <string name="no_results">No new results</string>
    <string name="error">Please enter a valid amount</string>
    <string name="hint_search">Search</string>
    <string name="share">Share</string>
    <string name="recipe_rank">Rank: </string>
    <string name="converter">Converter</string>
    <string name="tools">Tools</string>
    <string name="ingredient">Ingredient:</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_error">Error</string>

    <string name="recipe_details">Recipe Details</string>
    <string name="title_activity_recipe_web_view">RecipeWebViewActivity</string>

    <string name="amount">Amount: </string>
    <string name="hint_amount">Enter Amount</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="convert">Convert</string>
    <string name="sort_by">Sort BY</string>

    <string name="tea_spoon">Tea Spoon</string>
    <string name="dessert_spoon">Dessert Spoon</string>
    <string name="table_spoon">Table Spoon</string>
    <string name="cup">Cup</string>
    <string name="milliliter">Milliliter</string>
    <string name="deciliter">Deciliter</string>
    <string name="liter">Liter</string>
    <string name="gram">Gram</string>
    <string name="kilogram">Kilogram</string>

    <string name="most_popular">Most Recent</string>
    <string name="top_rated">Top Rated</string>


    <string-array name="units">
        <item>@string/tea_spoon</item>
        <item>@string/dessert_spoon</item>
        <item>@string/table_spoon</item>
        <item>@string/cup</item>
        <item>@string/milliliter</item>
        <item>@string/deciliter</item>
        <item>@string/liter</item>
        <item>@string/gram</item>
        <item>@string/kilogram</item>
    </string-array>

    <string name="result_receiver_action">com.example.zomy.potspans.intent.action.RESULT</string>

    <string-array name="sort_tech">
        <item>@string/most_popular</item>
        <item>@string/top_rated</item>
    </string-array>

</resources>