<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_converter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layoutManager="LinearLayoutManager"
    tools:showIn="@layout/activity_converter"
    tools:context="com.example.zomy.potspans.ConverterActivity">

    <TableLayout
        android:id="@+id/converter_table"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:text="@string/amount"/>
            <EditText
                android:layout_span="3"
                android:id="@+id/amount"
                android:textSize="18sp"
                android:hint="@string/hint_amount"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                />
        </TableRow>
        <TableRow
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:text="@string/from"/>
            <Spinner android:id="@+id/from"
                android:layout_span="3"/>
        </TableRow>
        <TableRow
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:text="@string/to"/>
            <Spinner android:id="@+id/to"
                android:layout_span="3"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_below="@+id/converter_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/convert_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/result"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/convert_button"
            android:layout_toLeftOf="@id/convert_button"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>