<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_recipe"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zomy.potspans.RecipeActivity"
    tools:showIn="@layout/activity_recipe">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp" />
        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            />
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/recipe_title"
            android:layout_below="@+id/recipe_image"
            android:layout_toLeftOf="@+id/recipe_rank"
            android:layout_toStartOf="@+id/recipe_rank"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/recipe_rank"
            android:layout_below="@+id/recipe_image"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:text="@string/recipe_rank"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/recipe_ingredient_title"
            android:layout_below="@id/recipe_title"
            android:layout_margin="10dp"
            android:text="@string/ingredient"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/recipe_ingredient"
            android:layout_below="@id/recipe_ingredient_title"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            app:theme="@style/Widget.AppCompat.Button"
            android:id="@+id/recipe_details"
            android:text="@string/recipe_details"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorAccent"
            android:padding="10dp"
            android:layout_below="@+id/recipe_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>
